fix(): Fix header z-index

--- a/src/client/components/ui/Header/styles.module.css
+++ b/src/client/components/ui/Header/styles.module.css
@@ -4,6 +4,7 @@
   position: fixed;
   width: 100%;
   top: 0;
+  z-index: 10;
   backdrop-filter: blur(10px);
 }
 
